組織A1/組織A1/metadata/objects/deploymetaTwo__c.object
<CustomObject>
    <fields>
        <fullName>deploymetaTwoB__c</fullName>
        <label>deploymetaTwoB</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoC__c</fullName>
        <label>deploymetaTwoC</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoD__c</fullName>
        <label>deploymetaTwoD</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoE__c</fullName>
        <label>deploymetaTwoE</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoF__c</fullName>
        <label>deploymetaTwoF</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoG__c</fullName>
        <label>deploymetaTwoG</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoH__c</fullName>
        <label>deploymetaTwoH</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoK__c</fullName>
        <label>deploymetaTwoK</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwoL__c</fullName>
        <label>deploymetaTwoL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaTwo__c</fullName>
        <label>deploymetaTwoA</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>deploymetaTwo</label>
    <nameField>
        <label>deploymetaTwo名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>